@@ -1,3 +1,4 @@
+* Add rownum limit style
 * Add no_as Flavor
 
 Version 0.7 - 2015-05-19
